updated some code

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
   </head>
   <body>
     <!-- PRELOADER STARTS -->
-    <!-- <div id="preloader">
-         <div class="line"></div>
-      </div> -->
+    <div id="preloader">
+      <div class="line"></div>
+    </div>
     <!-- PRELOADER ENDS -->
 
     <!-- WRAPPER STARTS -->
