updated some code

--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
                   <span class="position-relative">
                     <span class="animated-layer"> I am </span>
                     <span class="intro animated-layer">
-                      Front-end Developer with 7 years experience based in
-                      London
+                      Full-stack Developer with 4+ years experience based in
+                      Karachi
                     </span>
                   </span>
                   <span>
